<!--
  ~ Copyright (c) 2022-2023 Universitat Politècnica de València
  ~ Authors: David de Andrés and Juan Carlos Ruiz
  ~          Fault-Tolerant Systems
  ~          Instituto ITACA
  ~          Universitat Politècnica de València
  ~
  ~ Distributed under MIT license
  ~ (See accompanying file LICENSE.txt)
  -->

<resources>
    <string name="app_name">Ex07_Widgets</string>
    <!-- Strings for TextFieldsActivity -->
    <string name="text_string">Text fields</string>
    <string name="buttons">Buttons</string>
    <string name="widgets">Widgets</string>
    <string name="label">This is just a label</string>
    <string name="label_icon">This label also has an icon attached</string>
    <string name="regular">You can write <b>whatever</b> you want!</string>
    <string name="password">Guess the password!</string>
    <string name="datetime">Write date and time</string>
    <string name="multiline">Multiple lines are allowed here!</string>
    <string name="failed">The password does not match DADM</string>
    <!-- Strings for ButtonsActivity -->
    <string name="regular_button">Just a regular button</string>
    <string name="button_with_image">Button with an image</string>
    <string name="save">Save</string>
    <string name="on">ToggleButton is ON</string>
    <string name="off">ToggleButton is OFF</string>
    <string name="check">This CheckBox is checked by default</string>
    <string name="switch_text">This Switch is unchecked by default</string>
    <string name="radio1">RadioButton for 1st option</string>
    <string name="radio2">RadioButton for 2nd option</string>
    <string name="radio3">RadioButton for 3rd option</string>
    <string name="switch_checked">The switch is now checked</string>
    <string name="switch_unchecked">The switch is now unchecked</string>
    <!-- Strings for WidgetsActivity -->
    <string name="image_description">Default Android icon</string>
    <string name="control_progress">Indeterminate ProgressBar</string>
    <string name="message_progress">Current progress is %1$d out of %2$d</string>
    <string name="message_rating">Current rating is %1$.1f</string>
</resources>