<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022-2026 Universitat Politècnica de València
  ~ Authors: David de Andrés and Juan Carlos Ruiz
  ~          Fault-Tolerant Systems
  ~          Instituto ITACA
  ~          Universitat Politècnica de València
  ~
  ~ Distributed under MIT license
  ~ (See accompanying file LICENSE.txt)
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bTextFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_string"
        app:layout_constraintBottom_toTopOf="@+id/bButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bWidgets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/widgets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bButtons" />


</androidx.constraintlayout.widget.ConstraintLayout>